# ChangeLog for dev-ruby/rest-client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rest-client-1.4.2 (22 Apr 2010)

  22 Apr 2010; Hans de Graaff <graaff@gentoo.org> +rest-client-1.4.2.ebuild,
  +files/rest-client-1.4.2-no-jeweler.patch, +metadata.xml:
  Initial import. Dependency for pivotal-tracker.
