@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX rest-client-1.4.2-no-jeweler.patch 997 RMD160 d7ab57d711ae449eaf3f7a449d590a5ad1053e49 SHA1 e6bef9da5fbd60cc46c6f0e4f427f7227a442756 SHA256 a997e15b3093587e2db733b2ded5cbc12ad455c801d858fdd6fddeab41b35c05
 DIST rest-client-1.4.2.gem 50688 RMD160 ff579c555e61148606e32eb904f408952c5af6a5 SHA1 0a109aebf72283f63606e7ef1783ac44ad091500 SHA256 e0bcef80c4727f4aa47d95c07e747c646f27cd6e967dc6625fc0c68ad00ff2d8
+DIST rest-client-1.5.0.gem 51200 RMD160 b4ea89909873552e4023aed3e6835c9a98a06806 SHA1 b43b3c017a1c516454aac8c6945e88d2d9341445 SHA256 61c4cfd457ae37b1d516a3d04bd20ff74ec80d4518a320d26e3549cef52dcb48
 EBUILD rest-client-1.4.2.ebuild 712 RMD160 6883be62fa921e36ed97d965a0ead9270aa4de55 SHA1 06869eb0c4a94c2f2e5dbcb465ceda0b8ac623eb SHA256 3699048c708a069626e55b8b9d1afbf481d6da3166634089d706804ae9c30e20
-MISC ChangeLog 343 RMD160 0e50b03d6d7cbc2d7a12d2fc053244e64326cf9d SHA1 8209d8c6972c7e92b570cba1f0cd075876f4f401 SHA256 7066c1a6d1ab1beb295293867cb598878b3978ed2696f159cabb184c73ccf25b
+EBUILD rest-client-1.5.0.ebuild 708 RMD160 bcc3acd3635387a51145c7c77d76885245f7f808 SHA1 27f8031e2cc46fe8131aa43edd60f57ee5bff902 SHA256 5c2a70469071fd57901e09995a9cc4f5e03d321f3d2391d0b2c2df40a4358d03
+MISC ChangeLog 471 RMD160 340e69ab910fd62059ed150feb409464588e2693 SHA1 77982e080d0f1606e1709b1e3ee3b26b5860019d SHA256 d5162c32ab1f67b6c25cee8114a5437bfed936bf8ba31973585eb0462faddc29
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvROKIACgkQeM7EJeUH71OkqACfa/TxpTKvI9FYdF5AwA5BoT8h
-d1kAmgNuHjHrwPHWyGY3sOer+QSgiDkz
-=gHjY
+iEYEARECAAYFAkvkBa0ACgkQeM7EJeUH71NBqACfdvJF9CwPYX+U/LPEdJyiJ9mc
+dvQAnjBHQifo9dDwp+KE2aBYX8y8XkcV
+=thiM
 -----END PGP SIGNATURE-----
