@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rest-client-1.5.0 (07 May 2010)
+
+  07 May 2010; Hans de Graaff <graaff@gentoo.org> +rest-client-1.5.0.ebuild:
+  Version bump.
+
 *rest-client-1.4.2 (22 Apr 2010)
 
   22 Apr 2010; Hans de Graaff <graaff@gentoo.org> +rest-client-1.4.2.ebuild,
